Sort out some of the login() vs email() confusion.

--- a/template/en/default/global/user.html.tmpl
+++ b/template/en/default/global/user.html.tmpl
@@ -13,7 +13,7 @@
 <span class="vcard">
   [% FILTER collapse %]
     [% IF user.id %]
-      <a class="email" href="mailto:[% who.email FILTER html %]"
+      <a class="email" href="mailto:[% who.login FILTER html %]"
          title="[% who.identity FILTER html %]">
     [%- END -%]
     [% IF who.name %]
