--- a/template/en/default/email/whine.txt.tmpl
+++ b/template/en/default/email/whine.txt.tmpl
@@ -7,7 +7,7 @@
   #%]
 
 From: [% Param("mailfrom") %]
-To: [% email %][% Param("emailsuffix") %]
+To: [% user.email %]
 Subject: Your [% terms.Bugzilla %] [%+ terms.bug %] list needs attention.
 X-Bugzilla-Type: whine
 
