--- a/template/en/default/global/tabs.html.tmpl
+++ b/template/en/default/global/tabs.html.tmpl
@@ -35,7 +35,7 @@
     </tr>
   </table>
 
-  <div class="tabbody">
+  <div class="tabbody" id="tabbody_[% tab.name %]">
     [% content %]
   </div>
 
