--- a/extensions/Delphinium/template/en/default/hook/index-intro.html.tmpl
+++ b/extensions/Delphinium/template/en/default/hook/index-intro.html.tmpl
@@ -1,1 +1,1 @@
-<a href="buglist.cgi?bug_status=IN_PROGRESS&order=Importance">Currently Active [%+ terms.Bugs %]</a>
+<a href="buglist.cgi?bug_status=OPEN&order=changeddate%20DESC">Currently Active [%+ terms.Bugs %]</a>
