Bug 218917 - split email and login, paving the way for pseudonymity.

--- a/template/en/default/account/auth/login.html.tmpl
+++ b/template/en/default/account/auth/login.html.tmpl
@@ -29,10 +29,15 @@
 [%- IF Bugzilla.cgi.param("data") %] enctype="multipart/form-data"[% END %]>
   <table>
     <tr>
-      <th align="right"><label for="Bugzilla_login">Login:</label></th>
+      <th align="right">
+        <label for="Bugzilla_login">
+          Login:
+        </label>
+      </th>
       <td>
-        <input size="35" id="Bugzilla_login" name="Bugzilla_login">
-        [% Param('emailsuffix') FILTER html %]
+        <input size="35" id="Bugzilla_login" name="Bugzilla_login"
+               [%- ' type="email"' IF Param('use_email_as_login') %]
+               autofocus required>
       </td>
     </tr>
     <tr>
