--- a/template/en/default/admin/users/confirm-delete.html.tmpl
+++ b/template/en/default/admin/users/confirm-delete.html.tmpl
@@ -47,10 +47,20 @@
   listselectionvalues = listselectionvalues
 %]
 
-<table class="main">
+<table class="main" id="admin_table">
+  <tr class="column_header">
+    <th>Field</th>
+    <th>Value</th>
+  </tr>
+  [% IF !Param('use_email_as_login') %]
+    <tr>
+      <th>Login:</th>
+      <td>[% otheruser.login FILTER html %]</td>
+    </tr>
+  [% END %]
   <tr>
-    <th>Login name:</th>
-    <td>[% otheruser.login FILTER html %]</td>
+    <th>Email address:</th>
+    <td>[% otheruser.email FILTER html %]</td>
   </tr>
   <tr>
     <th>Real name:</th>
