--- a/template/en/default/account/email/confirm-new.html.tmpl
+++ b/template/en/default/account/email/confirm-new.html.tmpl
@@ -19,28 +19,22 @@
 
 <p>
   To create your account, you must enter a password in the form below.
-  Your email address and Real Name (if provided) will be shown with
-  changes you make.
+  You have been allocated a pseudonymous login name,
+  <span style="color: red">which you must use to
+  log in</span>. It will be shown with changes you make.
 </p>
 
 <form id="confirm_account_form" method="post" action="token.cgi">
   <input type="hidden" name="t" value="[% token FILTER html %]">
   <input type="hidden" name="a" value="confirm_new_account">
+  <input type="hidden" name="realname" value="">
   <table>
     [% IF !Param('use_email_as_login') %]
       <tr>
-        <th>Login:</th>
-        <td>[% login FILTER html %]</td>
+        <th align="right">Login Name:</th>
+        <td><span style="color: red">[% login FILTER html %]</span> (make a note of your login name now)</td>
       </tr>
     [% END %]
-    <tr>
-      <th align="right">Email Address:</th>
-      <td>[% email FILTER html %]</td>
-    </tr>
-    <tr>
-      <th align="right"><small><i>(OPTIONAL)</i></small> <label for="realname">Real Name</label>:</th>
-      <td><input type="text" id="realname" name="realname" value=""></td>
-    </tr>
     <tr>
       <th align="right"><label for="passwd1">Type your password</label>:</th>
       <td>
