Add list of open issues to the front page, using code pinched from MyDashboard.

--- a/extensions/Delphinium/template/en/default/global/variables.none.tmpl
+++ b/extensions/Delphinium/template/en/default/global/variables.none.tmpl
@@ -16,15 +16,15 @@
   #%]
 
 [% terms = {
-  "bug" => "issue",
-  "Bug" => "Issue",
-  "abug" => "an issue",
-  "Abug" => "An Issue",
-  "aBug" => "an Issue",
-  "ABug" => "An Issue",
-  "bugs" => "issues",
-  "Bugs" => "Issues",
-  "zeroSearchResults" => "Zarro Boogs found",
+  "bug" => "question",
+  "Bug" => "Question",
+  "abug" => "a question",
+  "Abug" => "A question",
+  "aBug" => "a Question",
+  "ABug" => "A Question",
+  "bugs" => "questions",
+  "Bugs" => "Questions",
+  "zeroSearchResults" => "No Questions Found",
   "Bugzilla" => "Delphinium"
   }
 %]
