--- a/template/en/default/index.html.tmpl
+++ b/template/en/default/index.html.tmpl
@@ -14,7 +14,10 @@
    title = "$terms.Bugzilla Main Page"
    header = "Main Page" 
    header_addl_info = "version $constants.BUGZILLA_VERSION"
-   style_urls = [ 'skins/standard/index.css' ]
+   style_urls = [ 'skins/standard/index.css',
+                  "extensions/Delphinium/web/styles/mydashboard.css" ]
+  javascript_urls = [ "js/yui3/yui/yui-min.js",
+                      "extensions/Delphinium/web/js/query.js" ]
 %]
 
 
