--- a/template/en/default/global/field-descs.none.tmpl
+++ b/template/en/default/global/field-descs.none.tmpl
@@ -102,7 +102,7 @@
      "percentage_complete"     => "%Complete",
      "priority"                => "Priority",
      "product_id"              => "Product ID",
-     "product"                 => "Product",
+     "product"                 => "Phase",
      "qa_contact"              => "QA Contact",
      "qa_contact_realname"     => "QA Contact Real Name",
      "remaining_time"          => "Hours Left",
