--- a/template/en/default/list/edit-multiple.html.tmpl
+++ b/template/en/default/list/edit-multiple.html.tmpl
@@ -41,7 +41,7 @@
 <table id="form">
   <tr>
 
-    <th><label for="product">Product:</label></th>
+    <th><label for="product">Phase:</label></th>
     <td>
       [% PROCESS selectmenu menuname = "product"
                             menuitems = products
